almost got CLI apps back running